tests/lit/tcheck/record_init_00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2026 Intel Corporation

record R = {
    x : Integer,
    y : Integer
};

function T() -> R
begin
    return R{x=>1, z=>3};
// CHECK: Type error: record initializer is missing field[s] y and/or has extra field[s] z
end
